added gitignore file

--- a/notebooks/IR-DM_Assignment_5.ipynb
+++ b/notebooks/IR-DM_Assignment_5.ipynb
@@ -380,7 +380,7 @@
    "id": "9c2fff58",
    "metadata": {},
    "source": [
-    "# Unsupervised learning"
+    "# Supervised learning"
    ]
   },
   {
